--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2018"
 
 [dependencies]
 actix = "0.8.1"
-actix-web = "1.0.0-beta.2"
-actix-web-actors = "1.0.0-alpha.3"
+actix-http = "0.2.1"
+actix-web = "1.0.0-rc"
+actix-web-actors = "1.0.0-beta.4"
